--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -365,7 +365,7 @@
                         <a class="banner-page-social-media" href="https://www.facebook.com/4men.com.vn">
                                 <img src="./img/banner-top-trang-chu-1-slide-19.jpg" alt="">
                             <div class="banner-page-social-media-foamy" >
-                                <img class="foamy foamy-logo" src="https://scontent.fhan19-1.fna.fbcdn.net/v/t39.30808-1/290083524_8324297380929710_4830327454115801564_n.jpg?stp=cp0_dst-jpg_p50x50&_nc_cat=1&ccb=1-7&_nc_sid=4da83f&_nc_eui2=AeE7M8TOUKP-Od3bCcEMg3M3A7WhQwAFFTsDtaFDAAUVO-kQhb5CAiuOQpwyI5Ljm57xEBREjG82RDOuonOzUIag&_nc_ohc=3gHUhq2RPE0AX_D0yAm&_nc_ht=scontent.fhan19-1.fna&oh=00_AfDn7k_ur8Bbe1tBU-8zOxXXvbzg6n6eqmRRqkcM828XOQ&oe=65E749DE" alt="">
+                                <img class="foamy foamy-logo" src="https://scontent.fhan19-1.fna.fbcdn.net/v/t39.30808-1/290083524_8324297380929710_4830327454115801564_n.jpg?stp=cp0_dst-jpg_p50x50&_nc_cat=1&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeE7M8TOUKP-Od3bCcEMg3M3A7WhQwAFFTsDtaFDAAUVO-kQhb5CAiuOQpwyI5Ljm57xEBREjG82RDOuonOzUIag&_nc_ohc=pZYv-nvY9sIAX8sGef3&_nc_ht=scontent.fhan19-1.fna&oh=00_AfAhvkdHeE2PlPn0v4pGsCsW3E8mWeYF6QRDj1ohCTZ0sg&oe=65FF04DE" alt="">
                                 <span class="foamy span-1" >4MEN</span>
                                 <span class="foamy">249.456 người theo dõi</span>
                                 <button class="foamy">
